[gd_scene load_steps=3 format=3 uid="uid://boktxac2sek7q"]

[ext_resource type="Script" path="res://Harjutus8/Harjutus8.gd" id="1_tflua"]
[ext_resource type="Texture2D" uid="uid://cw7mvr40tjw23" path="res://Harjutus8/taust.jpg" id="2_xrj1y"]

[node name="Harjutus8" type="Node2D"]
script = ExtResource("1_tflua")

[node name="taust" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xrj1y")

[node name="uus" type="Button" parent="taust"]
layout_mode = 0
offset_left = 465.0
offset_top = 129.0
offset_right = 560.0
offset_bottom = 160.0
text = "UUS MÄNG"

[node name="kivi" type="Button" parent="taust"]
offset_left = 52.0
offset_top = 498.0
offset_right = 177.0
offset_bottom = 558.0
theme_override_font_sizes/font_size = 32
text = "KIVI"

[node name="paber" type="Button" parent="taust"]
offset_left = 183.0
offset_top = 498.0
offset_right = 308.0
offset_bottom = 558.0
theme_override_font_sizes/font_size = 32
text = "PABER"

[node name="kaarid" type="Button" parent="taust"]
offset_left = 315.0
offset_top = 499.0
offset_right = 440.0
offset_bottom = 559.0
theme_override_font_sizes/font_size = 32
text = "KÄÄRID"

[node name="arvuti_vastus" type="RichTextLabel" parent="taust"]
layout_mode = 0
offset_left = 806.0
offset_top = 352.0
offset_right = 1006.0
offset_bottom = 392.0
theme_override_font_sizes/normal_font_size = 24

[node name="mangija_vastus" type="RichTextLabel" parent="taust"]
offset_left = 106.0
offset_top = 352.0
offset_right = 306.0
offset_bottom = 392.0
theme_override_font_sizes/normal_font_size = 24

[node name="Pealkiri" type="RichTextLabel" parent="taust"]
offset_left = 381.0
offset_top = 39.0
offset_right = 671.0
offset_bottom = 81.0
theme_override_font_sizes/normal_font_size = 30
text = "KIVI-PABER-KÄÄRID"
fit_content = true
scroll_active = false

[node name="arvuti_punktid" type="RichTextLabel" parent="taust"]
offset_left = 792.0
offset_top = 82.0
offset_right = 1032.0
offset_bottom = 122.0
theme_override_font_sizes/normal_font_size = 24

[node name="mangija_punktid" type="RichTextLabel" parent="taust"]
offset_left = 77.0
offset_top = 82.0
offset_right = 277.0
offset_bottom = 122.0
theme_override_font_sizes/normal_font_size = 24

[node name="Tulemus" type="RichTextLabel" parent="taust"]
offset_left = 465.0
offset_top = 206.0
offset_right = 765.0
offset_bottom = 246.0
theme_override_font_sizes/normal_font_size = 24

[connection signal="pressed" from="taust/uus" to="." method="_on_uus_pressed"]
[connection signal="pressed" from="taust/kivi" to="." method="_on_kivi_pressed"]
[connection signal="pressed" from="taust/paber" to="." method="_on_paber_pressed"]
[connection signal="pressed" from="taust/kaarid" to="." method="_on_kaarid_pressed"]
